--- a/works/1314080901112/index.html
+++ b/works/1314080901112/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>{{工程 BOM 物料录入清单}} by 1314080901112</title>
+   <title>工程 BOM  物料录入清单 by 1314080901112</title>
     <link rel="shortcut icon" href="icons/favicon.ico" />
     
     <!-- Bootstrap -->
